<resources>
    <string name="app_name">Login</string>
    <string name="user_text">Usuário</string>
    <string name="pw_text">Senha</string>
    <string name="button_login">Logar</string>
    <string name="button_cadastrar">cadastrar</string>
    <string name="button_esqueci_a_senha">Esqueci a senha</string>
    <string name="button_login_clicado">Botão Login clicado</string>
    <string name="button_forgor_clicado">Botão esqueci a senha clicado</string>
    <string name="button_cadastrar_clicado">Botão cadastrar clicado!</string>
    <string name="usuario_ou_senha_invalido">Usuário ou senha inválidos</string>
    <string name="label_bem_vindo">Bem Vindo</string>
    <string name="buttomTiraFoto">Tirar foto</string>



</resources>